<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Notes</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="note_edit">Note Edit</string>
    <string name="save">Save</string>
    <string name="add_new_note">Add new note</string>
    <string name="searchBar_hint">Search in notes</string>
    <string name="tags">Tags</string>
    <string name="note_deleted">The note has been deleted</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="note_delete_confirmation">Do you want to delete this note?</string>
    <string name="undo">Undo</string>
    <string name="confirmation">Confirmation</string>
    <string name="add_new_tag">Add new tag</string>
    <string name="new_note">New note</string>
    <string name="new_group">New group</string>
    <string name="group">Group</string>
    <string name="not_assigned">Not assigned</string>
    <string name="edit_group">Edit Group</string>
    <string name="name">Name</string>
    <string name="no_data">No data found</string>
    <string name="title_activity_login">Log in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome!</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="logout">Logout</string>
    <string name="not_logged_in">Not logged in</string>
    <string name="title_activity_teeeeeest">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>