<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_drawer"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:theme="@style/Theme.Notes.NoActionBar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="72dp" />

            <androidx.coordinatorlayout.widget.CoordinatorLayout
                android:id="@+id/coordinatorLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                        android:id="@+id/swipeRefreshLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <include
                            android:id="@+id/groups_recyclerView"
                            layout="@layout/group_list"
                            android:visibility="visible" />
                    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

                    <include
                        android:id="@+id/groups_noItems"
                        layout="@layout/group_list_noitems"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="clip_vertical|center_horizontal"
                    android:gravity="bottom|end"
                    android:orientation="vertical">

                    <com.getbase.floatingactionbutton.FloatingActionsMenu
                        android:id="@+id/fab_menu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        fab:fab_addButtonColorNormal="?attr/colorPrimary"
                        fab:fab_addButtonColorPressed="?attr/colorPrimaryDark"
                        fab:fab_addButtonPlusIconColor="@color/white"
                        fab:fab_labelStyle="@style/menu_labels_style"
                        fab:fab_labelsPosition="left">

                        <com.getbase.floatingactionbutton.FloatingActionButton
                            android:id="@+id/fab_newNote"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            fab:fab_colorNormal="?attr/colorPrimary"
                            fab:fab_colorPressed="?attr/colorPrimaryDark"
                            fab:fab_icon="@drawable/ic_list_24dp"
                            fab:fab_size="mini"
                            fab:fab_title="@string/new_note" />

                        <com.getbase.floatingactionbutton.FloatingActionButton
                            android:id="@+id/fab_newGroup"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            fab:fab_colorNormal="?attr/colorPrimary"
                            fab:fab_colorPressed="?attr/colorPrimaryDark"
                            fab:fab_icon="@drawable/ic_list_alt_24dp"
                            fab:fab_size="mini"
                            fab:fab_title="@string/new_group" />

                    </com.getbase.floatingactionbutton.FloatingActionsMenu>

                    <androidx.coordinatorlayout.widget.CoordinatorLayout
                        android:id="@+id/snackbar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </androidx.coordinatorlayout.widget.CoordinatorLayout>

        </LinearLayout>

        <com.arlib.floatingsearchview.FloatingSearchView
            android:id="@+id/floating_search_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp"
            fab:floatingSearch_close_search_on_keyboard_dismiss="true"
            fab:floatingSearch_leftActionMode="showHamburger"
            fab:floatingSearch_searchHint="@string/searchBar_hint"
            fab:floatingSearch_showSearchKey="false"
            fab:floatingSearch_suggestionsListAnimDuration="250">

        </com.arlib.floatingsearchview.FloatingSearchView>

    </RelativeLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/drawer_header"
        app:menu="@menu/main_drawer" />

</androidx.drawerlayout.widget.DrawerLayout>